fix card spacing

--- a/travel-journal/src/App.css
+++ b/travel-journal/src/App.css
@@ -40,6 +40,7 @@ body {
     align-items: center;
     height: 3.4375em;
     gap: 0.5em;
+    margin-bottom: 1.125em;
 }
 
 .header-title {
@@ -56,7 +57,6 @@ body {
 .card {
     margin: 2.5em;
     border-bottom: 1px solid #F5F5F5;
-    padding-top: 1.125em;
     display: flex;
     gap: 1em;
 }
@@ -81,10 +81,6 @@ body {
 
 .card-googlemaps {
     color: #918E9B;
-
-}
-
-.card-location-image {
 
 }
 
